# overacp

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  NOTICE  PROTOCOL.md  README.md  SPEC.md  SPEC_OLD.md  STATUS.md  TODO.md  clippy.toml  codecov.yml
.claude/hooks/: pr-mergeability-gate.sh
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml
agent/: Cargo.toml
agent/src/: adapter.rs  bridge.rs  config.rs  lib.rs  main.rs  process.rs  run.rs  tunnel.rs  workspace.rs
agent/tests/: e2e_supervisor_loop.rs  reconnect.rs
agent/tests/common/: mod.rs
common/: Cargo.toml
common/src/: lib.rs  sentry_rate_limit.rs
compute/: Cargo.toml
compute/src/: error.rs  exec.rs  lib.rs  logs.rs  node.rs  provider.rs
compute/src/config/: env.rs  file.rs  mod.rs  reference.rs
compute/src/providers/: local.rs  mod.rs
docs/design/: INDEX.md  context-management.md  controlplane.md  ha.md  loop-tools.md  protocol.md  workspace-sync.md
loop/: Cargo.toml  PLAN.md
loop/docs/design/: overloop-harness.md  platform-not-harness.md  third-party-harness-acp.md
loop/src/: acp.rs  agentic_loop.rs  compaction.rs  config.rs  lib.rs  main.rs  traits.rs
loop/src/llm/: client.rs  mod.rs  resolve.rs  retry.rs  tool_args.rs  types.rs
loop/src/mcp/: client.rs  mod.rs  types.rs
loop/src/observability/: langfuse.rs  mod.rs  preview.rs
loop/src/tools/: builtin.rs  mod.rs  registry.rs
loop/tests/: test_agentic_loop.rs  test_builtin_tools.rs  test_compaction.rs  test_langfuse.rs  test_llm_client.rs  test_mcp_client.rs  test_registry.rs
protocol/: Cargo.toml
protocol/src/: error.rs  jwt.rs  lib.rs  messages.rs  methods.rs
protocol/tests/: jwt_roundtrip.rs  wire_fixtures.rs
protocol/tests/fixtures/: context_compacted.json  initialize_response.json  message_content_blocks.json  message_with_tool_calls.json  poll_new_messages_response.json  quota_check_response.json  quota_update_request.json  session_message.json  stream_activity.json  stream_text_delta.json  stream_tool_call.json  stream_tool_result.json  turn_end_usage_only.json  turn_save_request.json
scripts/: smoke-e2e.sh  smoke.sh
server/: Cargo.toml
server/src/: auth.rs  basic_auth.rs  lib.rs  main.rs  routes.rs  startup.rs  state.rs
server/src/api/: agents.rs  dto.rs  error.rs  mod.rs  nodes.rs  pool_config.rs  providers.rs  routes.rs  tokens.rs
server/src/hooks/: boot.rs  mod.rs  quota.rs  tools.rs
server/src/redis_backend/: broker.rs  inbox.rs  keys.rs  lease.rs  mod.rs  queue.rs  registry.rs
server/src/registry/: agent.rs  mod.rs  queue.rs
server/src/store/: memory.rs  mod.rs  types.rs
server/src/tunnel/: broker.rs  dispatch.rs  mod.rs  run.rs  session_manager.rs
server/tests/: agents_rest.rs  compute_rest.rs  control_plane_auth.rs  dispatch_wireup.rs  hooks.rs  main_env.rs  registry.rs  rest_surface.rs  tunnel_e2e.rs
server/tests/fixtures/: morph_pool_create.json  morph_validate.json
tests/: run.sh  smoke-broker.sh  smoke-e2e.sh  smoke-ha.sh  smoke-multimodal.sh  smoke-tools.sh
