[workspace]
resolver = "2"
members = [
    "loop",
    "protocol",
    "agent",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/overfolder/overacp"

[workspace.lints.clippy]
module_inception = "deny"
absolute_paths = "deny"
too_many_lines = "deny"

[profile.release]
lto = true
strip = true
codegen-units = 1
