[workspace]
resolver = "2"
members = [
    "agent",
    "compute",
    "loop",
    "server",
]

[workspace.dependencies]
tokio = { version = "1.40", default-features = false }
axum = { version = "0.7", default-features = false, features = ["http1", "tokio", "json"] }
futures-util = { version = "0.3", default-features = false }
dashmap = "6"
jsonwebtoken = { version = "9", default-features = false }
dotenvy = "0.15"
serde = { version = "1" }
serde_json = { version = "1" }
async-trait = "0.1"
thiserror = "1"
uuid = { version = "1" }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/overfolder/overacp"

[workspace.lints.clippy]
module_inception = "deny"
absolute_paths = "deny"
too_many_lines = "deny"

[profile.release]
lto = true
strip = true
codegen-units = 1
