[package]
name = "overacp-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "over/ACP agent-side WebSocket supervisor: connects to the broker, spawns a child agent process (overloop or any AgentAdapter impl), and bridges their stdio."

[lib]
name = "overacp_agent"
path = "src/lib.rs"

[[bin]]
name = "overacp-agent"
path = "src/main.rs"

[dependencies]
overacp-protocol = { path = "../protocol" }

tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "net", "time", "process", "io-util"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = { workspace = true }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow = "1"
dotenvy = { workspace = true }
url = "2"
rustls = { version = "0.23", features = ["ring"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util", "process", "io-util"] }

[lints]
workspace = true
