[package]
name = "overacp-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "over/ACP agent-side WebSocket supervisor: connects to the broker, spawns a child agent process (overloop or any AgentAdapter impl), and bridges their stdio."

[lib]
name = "overacp_agent"
path = "src/lib.rs"

[[bin]]
name = "overacp-agent"
path = "src/main.rs"

[dependencies]
overacp-protocol = { path = "../protocol" }

tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "net", "time", "process", "io-util"] }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow = "1"
dotenvy = { workspace = true }
url = "2"
rustls = { version = "0.23", features = ["ring"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util", "process", "io-util"] }
overacp-server = { path = "../server" }
wiremock = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tempfile = "3"
uuid = { workspace = true, features = ["v4"] }
serde_json = { workspace = true }
axum = { workspace = true }
bytes = "1"

[lints]
workspace = true
