[package]
name = "overacp-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "over/ACP agent-side WebSocket supervisor: connects to the broker, spawns a child agent process (overloop or any AgentAdapter impl), and bridges their stdio."

[lib]
name = "overacp_agent"
path = "src/lib.rs"

[[bin]]
name = "overacp-agent"
path = "src/main.rs"

[dependencies]
overacp-protocol = { path = "../protocol" }

tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "net", "time", "process", "io-util"] }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow = "1"
dotenvy = { workspace = true }
url = "2"
rustls = { version = "0.23", features = ["ring"] }

# Optional Sentry error reporting. Disabled by default so operators
# who don't want Sentry pay no compile-time or runtime cost. Enable
# with `--features sentry`; runtime activation still requires
# `SENTRY_DSN`.
sentry = { version = "0.47", default-features = false, features = [
    "backtrace",
    "contexts",
    "reqwest",
    "rustls",
    "tracing",
], optional = true }
sentry-tracing = { version = "0.47", optional = true }

[features]
default = []
sentry = ["dep:sentry", "dep:sentry-tracing"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util", "process", "io-util"] }
overacp-server = { path = "../server" }
async-trait = { workspace = true }
wiremock = "0.6"
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls"] }
tempfile = "3"
uuid = { workspace = true, features = ["v4"] }
serde_json = { workspace = true }
axum = { workspace = true }
bytes = "1"

[lints]
workspace = true
