[package]
name = "overacp-compute-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types and traits for over/ACP compute providers."

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["fs", "sync", "process", "io-util", "time", "rt", "macros"] }
tokio-stream = { version = "0.1", default-features = false, features = ["sync"] }
futures = "0.3"
bytes = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
toml = "1.1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "fs", "sync"] }

[lints]
workspace = true
