[package]
name = "overloop"
version = "0.1.0"
edition = "2021"
description = "Minimal agentic loop — ACP over stdio, MCP, OpenAI-compatible LLM. Reference agent for the over/ACP framework."
license = "MIT"
repository = "https://github.com/overfolder/overacp"

[lib]
name = "overloop"
path = "src/lib.rs"

[[bin]]
name = "overloop"
path = "src/main.rs"

[dependencies]
overacp-protocol = { path = "../protocol" }
anyhow = "1.0.102"
base64 = "0.22"
async-trait = "0.1.89"
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
futures-util = "0.3.32"
glob = "0.3.3"
reqwest = { version = "0.13.3", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.1", features = ["v4"] }
walkdir = "2.5.0"

# Optional Sentry error reporting. Disabled by default so operators who
# don't want Sentry pay no compile-time or runtime cost. Enable with
# `--features sentry`; runtime activation still requires `SENTRY_DSN`.
sentry = { version = "0.48", default-features = false, features = [
    "backtrace",
    "contexts",
    "reqwest",
    "rustls",
    "tracing",
], optional = true }
sentry-tracing = { version = "0.48", optional = true }
overacp-common = { path = "../common", optional = true }

[features]
default = []
sentry = [
    "dep:sentry",
    "dep:sentry-tracing",
    "dep:overacp-common",
    "overacp-common/sentry",
]

[lints]
workspace = true

[dev-dependencies]
serial_test = "3.4.0"
tempfile = "3.27.0"
wiremock = "0.6.5"
