[package]
name = "overacp-protocol"
version = "0.1.0"
edition = "2021"
description = "Wire types for the over/ACP protocol — JSON-RPC method names, request/response/notification structs, and JWT session claims. Pure types, no I/O."
license = "Apache-2.0"
repository = "https://github.com/overfolder/overacp"

[lib]
name = "overacp_protocol"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
jsonwebtoken = "9.3"
uuid = { version = "1.23.0", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
thiserror = "2.0"

[dev-dependencies]
serde_json = "1.0.149"

[lints]
workspace = true
