[package]
name = "overacp-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Wire types for the over/ACP protocol — JSON-RPC method names, request/response/notification structs, and JWT session claims. Pure types, no I/O."

[lib]
name = "overacp_protocol"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
jsonwebtoken = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }

[lints]
workspace = true
