[package]
name = "overacp-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "overacp-server"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "net", "time"] }
axum = { workspace = true, features = ["ws", "query"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
futures = "0.3"
futures-util = { workspace = true }
dashmap = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
jsonwebtoken = { workspace = true }
dotenvy = { workspace = true }

# Optional Redis/Valkey backend for multi-instance HA.
redis = { version = "1.2", features = ["tokio-comp", "connection-manager", "streams"], optional = true }

[features]
redis = ["dep:redis"]

[lints]
workspace = true

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = { workspace = true }
